Fixes visibility of products separator on category pages (ff/ie)

--- a/src/customizations/items-grid/_items-grid.scss
+++ b/src/customizations/items-grid/_items-grid.scss
@@ -36,6 +36,7 @@ $namespace: 'cs-';
             width: calc( 100% + 1.5rem );
             margin-left: -.75rem;
             border-top: 1px solid $colorAlto;
+            z-index: 3;
 
             @include media( '>=tablet' ) {
                 width: calc( 100% + 2rem );
